--- a/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
@@ -115,6 +115,9 @@ $_helper = $this->helper('catalog/output');
                 <?php $i = 0;
                 foreach ($_productCollection as $_product): ?>
                     <li class="item">
+                        <?php if (date("Y-m-d") >= substr($_product->getNewsFromDate(), 0, 10) && date("Y-m-d") <= substr($_product->getNewsToDate(), 0, 10)) { ?>
+                            <div class="new-ribbon"><span><?php echo $this->__('Neu') ?></div>
+                        <?php } ?>
                         <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                             <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
                             <div class="special-ribbon"><span><?php echo $_savingPercent; ?>% Rabatt</span>
