--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -190,7 +190,7 @@
       -khtml-box-shadow: 1px 1px 6px #a0a0a0;
       box-shadow: 1px 1px 6px #a0a0a0;
       .products-image img {
-        -z-index: 1;
+        z-index: 1;
         -moz-transform: scale(1.05);
         -webkit-transform: scale(1.05);
         transform: scale(1.05);
@@ -239,28 +239,6 @@
       top: 38px;
       right: -42px;
     }
-    .special-ribbon span::before {
-      content: "";
-      position: absolute;
-      left: 0px;
-      top: 100%;
-      z-index: -1;
-      border-left: 3px solid $alert-color;
-      border-right: 3px solid transparent;
-      border-bottom: 3px solid transparent;
-      border-top: 3px solid $alert-color;
-    }
-    .special-ribbon span::after {
-      content: "";
-      position: absolute;
-      right: 0px;
-      top: 100%;
-      z-index: -1;
-      border-left: 3px solid transparent;
-      border-right: 3px solid $alert-color;
-      border-bottom: 3px solid transparent;
-      border-top: 3px solid $alert-color;
-    }
     .new-ribbon {
       z-index: 2;
       position: absolute;
@@ -286,30 +264,14 @@
       top: 20px;
       right: -34px;
     }
-    .new-ribbon span::before {
-      content: "";
-      position: absolute;
-      left: 0px;
-      top: 100%;
-      z-index: -1;
-      border-left: 3px solid $success-color;
-      border-right: 3px solid transparent;
-      border-bottom: 3px solid transparent;
-      border-top: 3px solid $success-color;
-    }
-    .new-ribbon span::after {
-      content: "";
-      position: absolute;
-      right: 0px;
-      top: 100%;
-      z-index: -1;
-      border-left: 3px solid transparent;
-      border-right: 3px solid $success-color;
-      border-bottom: 3px solid transparent;
-      border-top: 3px solid $success-color;
+    .products-image {
+      img {
+        z-index: 1;
+      }
     }
 
     .product-brand {
+      z-index: 2;
       img {
         max-width: 8rem;
         text-align: center;
