--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -71,10 +71,11 @@
     </div>
     <div class="header-bottom">
         <div class="nav">
-            <button class="hamburger hamburger--arrow-d" type="button" data-toggle="offCanvas">
+            <button class="hamburger hamburger--arrow-d hamburger--accessible" type="button" data-toggle="offCanvas">
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
               </span>
+              <span class="hamburger-label show-for-medium">Menu</span>
             </button>
         </div>
         <div class="search">
