--- a/skin/frontend/foundation/default/src/assets/scss/custom/_hamburgers.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_hamburgers.scss
@@ -134,4 +134,17 @@ $hamburger-types: (
       }
     }
   }
+  .hamburger--accessible {
+    display: inline-block;
+  }
+  .hamburger-box {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .hamburger-label {
+    font-weight: 500;
+    display: inline-block;
+    vertical-align: middle;
+    text-transform: uppercase;
+  }
 }
