--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -145,7 +145,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/seltmann-weiden')); ?>"><?php echo $this->__('Seltmann Weiden') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/unox')); ?>"><?php echo $this->__('Unox') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/liebherr')); ?>"><?php echo $this->__('Liebherr') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller')); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
@@ -174,10 +174,10 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/piazza-doro')); ?>"><?php echo $this->__('Piazza D\'oro Espresso') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational/variocooking-center')); ?>"><?php echo $this->__('VarioCookingCenter') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational/ivario-pro')); ?>"><?php echo $this->__('Rational iVario Pro') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/chromonorm')); ?>"><?php echo $this->__('ChromoNorm Edelstahlm&ouml;bel') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/picard-und-wielputz')); ?>"><?php echo $this->__('Picard &amp; Wielp&uuml;tz Besteck') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/nordcap/kuehlschraenke')); ?>"><?php echo $this->__('NordCap K&uuml;hlschr&auml;nke') ?></a>
