--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -32,6 +32,18 @@ $_categories = $this->getCurrentChildCategories(); ?>
     <?php endforeach; ?>
     <li class="item" data-equalizer-watch>
         <div class="category-image">
+            <a href="<?php echo Mage::getUrl('') . 'hersteller/jura'; ?>"
+               title="JURA Shop">
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/jura-shop.jpg'); ?>" alt="JURA Shop"/>
+            </a>
+            <h2 class="category-name">
+                <a href="<?php echo Mage::getUrl('') . 'hersteller/jura'; ?>"
+                   title="JURA Shop">JURA Shop</a>
+            </h2>
+        </div>
+    </li>
+    <li class="item" data-equalizer-watch>
+        <div class="category-image">
             <a href="<?php echo Mage::getUrl('') . 'hersteller/bartscher'; ?>"
                title="Bartscher Shop">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/bartscher-shop.png'); ?>" alt="Bartscher Shop"/>
