--- a/app/design/frontend/foundation/default/template/page/html/topmenu.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/topmenu.phtml
@@ -3,7 +3,8 @@
     <ul class="vertical menu accordion-menu nav" data-accordion-menu data-multi-open="false" data-submenu-toggle="true">
         <li><a href="<?php echo Mage::getUrl(''); ?>"><?php echo $this->__('Home'); ?></a></li>
         <?php echo $_menu ?>
+        <li><a href="<?php echo Mage::getUrl('').'hersteller/jura'; ?>"><?php echo $this->__('Jura Shop'); ?></a></li>
         <li><a href="<?php echo Mage::getUrl('').'hersteller/bartscher'; ?>"><?php echo $this->__('Bartscher Shop'); ?></a></li>
-        <li><a href="<?php echo Mage::getUrl('').'hersteller/aliseo'; ?>"><?php echo $this->__('Aliseo Profishop'); ?></a></li>
+        <li><a href="<?php echo Mage::getUrl('').'hersteller/aliseo'; ?>"><?php echo $this->__('Aliseo Shop'); ?></a></li>
     </ul>
 <?php endif ?>
