add callout cart

--- a/app/design/frontend/foundation/default/template/checkout/cart/noItems.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart/noItems.phtml
@@ -24,6 +24,11 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+<div class="callout warning text-center">
+    <p>
+        <i class="fas fa-exclamation-triangle"></i> <?php echo $this->__('Auf Grund der Feiertage und der aktuellen Corona-Situation kann es zu Lieferverzögerungen kommen!') ?>
+    </p>
+</div>
 <div class="page-title">
     <h1><?php echo $this->__('Shopping Cart is Empty') ?></h1>
 </div>
