--- a/app/design/frontend/foundation/default/template/checkout/cart.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart.phtml
@@ -32,6 +32,11 @@
  */
 ?>
 <div class="cart">
+    <div class="callout warning text-center">
+        <p>
+            <i class="fas fa-exclamation-triangle"></i> <?php echo $this->__('Auf Grund der Feiertage und der aktuellen Corona-Situation kann es zu Lieferverzögerungen kommen!') ?>
+        </p>
+    </div>
     <div class="page-title title-buttons">
         <h1><?php echo $this->__('Shopping Cart') ?></h1>
         <?php if (!$this->hasError()): ?>
