--- a/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
@@ -4,6 +4,7 @@
       .row {
         max-width: 100%
       }
+
       h1.center-line, p.h1.center-line,
       h2.center-line, p.h2.center-line,
       h3.center-line, p.h3.center-line,
@@ -13,6 +14,7 @@
         overflow: hidden;
         text-align: center;
         color: $primary-color;
+
         &:before, &:after {
           background-color: $dark-gray;
           content: "";
@@ -22,10 +24,12 @@
           vertical-align: middle;
           width: 50%;
         }
+
         &:before {
           right: 0.5em;
           margin-left: -50%;
         }
+
         &:after {
           left: 0.5em;
           margin-right: -50%;
@@ -44,6 +48,7 @@
 .trust-grid {
   list-style: none;
   margin-top: 0.5rem;
+
   li {
     padding: 1rem;
     @extend .thumbnail, .text-center;
@@ -57,10 +62,12 @@
       filter: none;
       -webkit-filter: grayscale(0);
     }
+
     img {
       padding: 0 1rem 1rem 1rem;
       width: 90px;
     }
+
     p {
       font-size: rem-calc(12);
       margin-bottom: 0;
@@ -73,11 +80,13 @@
     h2 {
       @extend .h4;
     }
+
     .invert h2, .invert p {
       @include breakpoint(medium) {
         color: $white;
       }
     }
+
     .invert {
       @include breakpoint(medium) {
         background: $primary-color;
@@ -85,6 +94,7 @@
       @extend .margin-bottom-3;
 
     }
+
     $zh-round: 110px;
     @include breakpoint(medium) {
       .round-left {
@@ -102,6 +112,7 @@
 .timeline {
   position: relative;
   margin: 0 auto;
+
   &::after {
     content: '';
     position: absolute;
@@ -115,6 +126,7 @@
       left: 50%;
     }
   }
+
   .container {
     position: relative;
     background-color: inherit;
@@ -127,6 +139,7 @@
     @include breakpoint(medium up) {
       width: 50%;
     }
+
     &::after {
       content: '';
       position: absolute;
@@ -139,6 +152,7 @@
       border-radius: 50%;
       z-index: 1;
     }
+
     @include breakpoint(small only) {
       &::before {
         content: " ";
@@ -154,25 +168,30 @@
         border-color: transparent $primary-color transparent transparent;
       }
     }
+
     .content {
       text-align: center;
       padding: 20px 30px;
       position: relative;
       border-radius: 6px;
       border: 4px solid $primary-color;
+
       &::before {
         left: 60px;
         border: medium solid $primary-color;
         border-width: 10px 10px 10px 0;
         border-color: transparent $primary-color transparent transparent;
       }
+
       img {
         width: 120px;
       }
     }
   }
+
   .left {
     left: 0;
+
     &::before {
       content: " ";
       height: 0;
@@ -191,17 +210,20 @@
         border-color: transparent transparent transparent $primary-color;
       }
     }
+
     &::after {
       @include breakpoint(small only) {
         left: 18px;
       }
     }
   }
+
   .right {
     left: 0;
     @include breakpoint(medium up) {
       left: 50%;
     }
+
     &::before {
       content: " ";
       height: 0;
@@ -216,6 +238,7 @@
       border-width: 10px 10px 10px 0;
       border-color: transparent $primary-color transparent transparent;
     }
+
     &::after {
       left: 18px;
       @include breakpoint(medium up) {
@@ -223,5 +246,17 @@
       }
     }
   }
+}
 
+.video-rounded {
+  border-radius: $global-radius;
+  -moz-border-radius: $global-radius;
+  -webkit-border-radius: $global-radius;
+  overflow: hidden;
+  margin-bottom: $global-margin;
+  video {
+    position: relative;
+    margin-left: -3px;
+    margin-bottom: -5px;
+  }
 }
